<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionGroup="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:title="@string/edit"
                app:titleTextAppearance="@style/TextAppearance.Material3.TitleLarge" />
        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_hint"
            android:src="@drawable/ic_title"
            app:layout_constraintEnd_toStartOf="@id/tlEntryTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tlEntryTitle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlEntryTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/title_hint"
            app:helperText="@string/required_helper_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appBar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEntryTitle"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:paddingBottom="16dp"
                app:textInputLayoutFocusedRectEnabled="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/ivTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_hint"
            android:src="@drawable/ic_account_circle"
            app:layout_constraintEnd_toStartOf="@id/tlAccount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tlAccount" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/account_hint"
            app:helperTextTextAppearance="@style/TextAppearance.Material3.BodySmall"
            app:layout_constraintEnd_toEndOf="@id/tlEntryTitle"
            app:layout_constraintStart_toStartOf="@id/tlEntryTitle"
            app:layout_constraintTop_toBottomOf="@id/tlEntryTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAccount"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:paddingBottom="16dp"
                android:textColor="?colorOnSurface"
                android:theme="@style/TextInputStyle"
                app:textInputLayoutFocusedRectEnabled="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_hint"
            android:src="@drawable/ic_person"
            app:layout_constraintEnd_toStartOf="@id/tlUsername"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tlUsername" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/username_hint"
            app:helperTextTextAppearance="@style/TextAppearance.Material3.BodySmall"
            app:layout_constraintEnd_toEndOf="@id/tlAccount"
            app:layout_constraintStart_toStartOf="@id/tlAccount"
            app:layout_constraintTop_toBottomOf="@id/tlAccount">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:paddingBottom="16dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_hint"
            android:src="@drawable/ic_password"
            app:layout_constraintEnd_toStartOf="@id/tlPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tlPassword" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password_hint"
            app:endIconMode="password_toggle"
            app:helperText="@string/required_helper_text"
            app:layout_constraintEnd_toEndOf="@id/tlUsername"
            app:layout_constraintStart_toStartOf="@id/tlUsername"
            app:layout_constraintTop_toBottomOf="@id/tlUsername">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textVisiblePassword"
                android:paddingBottom="16dp"
                android:theme="@style/TextInputStyle" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_hint"
            android:src="@drawable/ic_website"
            app:layout_constraintEnd_toStartOf="@id/tlWebsite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tlWebsite" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlWebsite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/website_hint"
            app:helperText="@string/required_helper_text"
            app:layout_constraintEnd_toEndOf="@id/tlPassword"
            app:layout_constraintStart_toStartOf="@id/tlPassword"
            app:layout_constraintTop_toBottomOf="@id/tlPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etWebsite"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textWebEmailAddress"
                android:maxLines="5"
                android:paddingBottom="16dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_hint"
            android:src="@drawable/ic_description"
            app:layout_constraintEnd_toStartOf="@id/tlDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tlDescription" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/description_hint"
            app:helperTextTextAppearance="@style/TextAppearance.Material3.BodySmall"
            app:layout_constraintEnd_toEndOf="@id/tlWebsite"
            app:layout_constraintStart_toStartOf="@id/tlWebsite"
            app:layout_constraintTop_toBottomOf="@id/tlWebsite">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescription"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine|textCapSentences"
                android:isScrollContainer="true"
                android:maxLines="20"
                android:paddingBottom="16dp"
                app:textInputLayoutFocusedRectEnabled="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDone"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:text="@string/done"
            app:layout_constraintEnd_toEndOf="@id/tlDescription"
            app:layout_constraintStart_toStartOf="@id/tlDescription"
            app:layout_constraintTop_toBottomOf="@id/tlDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>